Fix minor bugs in training model Add configuration settings for web interface

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,10 +5,9 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ~/deepQA/logs:/root/DeepQA/logs
-      - ~/deepQA/model:/root/DeepQA/save/model
-      - ~/deepQA/model:/root/DeepQA/save/model-server
-      - ~/deepQA/samples:/root/DeepQA/data/samples
+      - ~/deepqa/logs:/root/DeepQA/logs
+      - ~/deepqa/model:/root/DeepQA/model
+      - ~/deepqa/model:/root/DeepQA/model-server
     depends_on:
       - redis
   redis:
